--- a/frontend/src/components/Login/LoginForm.css
+++ b/frontend/src/components/Login/LoginForm.css
@@ -130,3 +130,48 @@ after { clear: both; }
   color: white;
   width: 315px;
 }
+
+@media (max-width: 768px) {
+  #login {
+    width: 90%;
+  }
+
+  #icon {
+    width: 200px;
+    height: 200px;
+  }
+
+  #login form input[type="text"],
+  #login form input[type="password"] {
+    width: calc(100% - 400px);
+  }
+}
+
+@media (max-width: 480px) {
+  #login form{
+    width: 200px;
+  }
+
+  #login {
+    width: 100%;
+    padding: 10px;
+  }
+
+  #icon {
+    width: 150px;
+    height: 150px;
+  }
+
+  #login form input[type="text"],
+  #login form input[type="password"] {
+    width: calc(100% - 100px);
+  }
+
+  #login form input[type="submit"] {
+    height: 50px;
+  }
+
+  #formFooter {
+    width: 100%;
+  }
+}
