--- a/frontend/src/components/BloodSearch/Bloodsearch.css
+++ b/frontend/src/components/BloodSearch/Bloodsearch.css
@@ -3,7 +3,7 @@
 .blood-search-container {
   margin-top: 105px;
   max-width: 800px;
-  margin: 15px 0 0 340px;
+  margin: 15px auto;
   padding: 20px;
   background-color: #1d2531;
   border-radius: 8px;
@@ -30,7 +30,7 @@
 }
 
 .blood-search-container div #bloodGroup {
-  width: 200px;
+  width: 240px;
   padding: 12px;
   margin-bottom: 20px;
   margin-left: 15px;
@@ -51,7 +51,6 @@
 }
 
 .blood-search-container input[type="text"] {
-  /* width: calc(100% - 10px); */
   width: 200px;
   padding: 12px;
   margin-bottom: 20px;
@@ -60,11 +59,8 @@
   border-radius: 6px;
   font-size: 16px;
   background-color: #1d2531;
-  /* Input background color */
   color: #fff;
-  /* Input text color */
   border: 1px solid #ddd;
-  /* Input border */
   outline: none;
 }
 
@@ -121,4 +117,77 @@
 
 .patient-list tbody tr:hover {
   background-color: #364357;
+}
+
+/* Media Queries for Responsive Design */
+@media screen and (max-width: 992px) {
+  .blood-search-container {
+    margin: 15px 20px 0 20px;
+  }
+
+  .blood-search-container div {
+    flex-basis: calc(50% - 10px);
+  }
+
+  .patient-list h3 {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
+
+  .patient-list table {
+    margin-left: 25%;
+    width: 50%;
+    transform: translateX(-25%);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .blood-search-container {
+    margin: 15px 10px 0 10px;
+  }
+
+  .blood-search-container div {
+    flex-basis: 100%;
+  }
+
+  .blood-search-container div #bloodGroup, .blood-search-container input[type="text"] {
+    width: calc(100% - 30px);
+    margin-left: 0;
+  }
+
+  .patient-list h3 {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
+
+  .patient-list table {
+    margin-left: 50%;
+    width: 90%;
+    transform: translateX(-50%);
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .blood-search-container {
+    margin: 15px 5px 0 5px;
+  }
+
+  .blood-search-container div #bloodGroup, .blood-search-container input[type="text"] {
+    width: calc(100% - 20px);
+    margin-left: 0;
+  }
+
+  .patient-list h3 {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+  }
+
+  .patient-list table {
+    margin-left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
+  }
 }
