--- a/frontend/src/components/AdminDashboard/Admin.css
+++ b/frontend/src/components/AdminDashboard/Admin.css
@@ -122,6 +122,7 @@
   background-color: var(--action-color);
   height: 100%;
   width: 4px;
+  top: -1px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -275,4 +276,29 @@
 
 #otpbt:focus {
   background: #e1a70a;
+}
+
+@media screen and (max-width: 576px) {
+  #admin{
+    display: none;
+  }
+
+  #admin-app-content{
+    margin-top: 150px;
+  }
+
+  #admin-name{
+    margin-top: -140px;
+    font-size:40px;
+    margin-left: 110px;
+  }
+
+  #hospitalregister input{
+    width: auto;
+    margin-left: -55px;
+  }
+
+  #hospitalregister #e{
+    width: auto;
+  }
 }
