--- a/frontend/src/components/Logout/Logout.css
+++ b/frontend/src/components/Logout/Logout.css
@@ -4,6 +4,7 @@
   background-color: #2c3338;
   color: rgb(170, 7, 7);
   font-size: large;
+  font-weight: bold;
   border: 3px solid rgb(170, 7, 7);
   margin-top: -1px;
   margin-left: 10px;
@@ -17,4 +18,42 @@
 .logout-button:hover {
   background-color: rgb(170, 7, 7);
   color: #ffffff;
+}
+
+/* Media Queries for Responsive Design */
+@media screen and (max-width: 992px) {
+  .logout-button {
+    width: 140px;
+    font-size: medium;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .logout-button {
+    width: 130px;
+    font-size: medium;
+    padding: 8px 18px;
+    height: 45px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .logout-button {
+    width: 120px;
+    font-size: small;
+    padding: 6px 16px;
+    height: 40px;
+    margin-left: 5px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .logout-button {
+    width: 100px;
+    font-size: small;
+    padding: 5px 12px;
+    height: 35px;
+    margin-left: 45px;
+    margin-top: 10px;
+  }
 }
