--- a/frontend/src/components/Navigation/Nav.css
+++ b/frontend/src/components/Navigation/Nav.css
@@ -85,7 +85,7 @@ body {
   flex-direction: column;
   cursor: pointer;
   padding: 14px;
-  padding-left: 360px;
+  padding-left: 320px;
 }
 
 .hamburger .bar {
@@ -113,6 +113,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 99;
   }
 
   .topnav .menu-links {
@@ -145,4 +146,6 @@ body {
   .hamburger {
     display: flex;
   }
+
+  
 }
